chore: migrate to MCP version 20260728